--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <section id="bio">
         <h2>About Me</h2>
         <img src="your-image.jpg" alt="Chimemezue Ezeani">
-        <p>Hi, I'm Chimemezue Clinton Ezeani, a passionate developer with experience in IT and management. I have a keen interest in AI, programming, and technology. Over the years, I have worked on various projects that have honed my skills in web development, coding, and optimization.</p>
+        <p>Hi, I'm Chimemezue Clinton Ezeani, a passionate developer with experience in IT and management. 
+            I have a keen interest in AI, programming, and technology. Over the years, I have worked on various projects that have honed my skills in web development, coding, and optimization.</p>
     </section>
     <section id="class">
         <h2>About the Class</h2>
