adding my photo

--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Repository</title>
+    <title>Welcome to ITMD 541</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Repository</h1>
-        <p>Your gateway to learning and growth</p>
+        <h1>Welcome to ITMD 541</h1>
+        <p>Understanding Web Application Fundamentals through HTML,CSS and Javascript</p>
     </header>
     <section id="bio">
         <h2>About Me</h2>
-        <img src="your-image.jpg" alt="Chimemezue Ezeani">
-        <p>Hi, I'm Chimemezue Clinton Ezeani, a passionate developer with experience in IT and management. 
-            I have a keen interest in AI, programming, and technology. Over the years, I have worked on various projects that have honed my skills in web development, coding, and optimization.</p>
+        <img src="images/selfie.jpg" alt="Chimemezue Ezeani">
+        <p>Hi, I'm Chimemezue Clinton Ezeani, a passionate developer with experience in cloud infrastructure and administration. I have limited web design experience, however I have developed python applications and deployed them on cloud providers like AWS and Azure via Kubernetes.
+            I have a keen interest in AI and LLMs and I am constantly thinking of ways to improve human-computer interaction and accessibility by implementing some form of intelligence. I graduated from <a class="hyperlinks" href="https://www.iit.edu">IIT</a> with my Bachelors degree in Computer Engineering in Summer 2023</p>
     </section>
-    <section id="class">
-        <h2>About the Class</h2>
-        <p>This class is designed to provide you with a comprehensive understanding of web development. We will cover topics ranging from HTML and CSS to JavaScript and beyond. By the end of this course, you will have the skills and knowledge to create your own web applications.</p>
+    <section id="class-info">
+        <h2>About ITMD 541</h2>
+        <p></p>
     </section>
     <footer>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/cezeani">LinkedIn</a></p>
+        <p>Connect with me on <a class="hyperlinks" href="https://www.linkedin.com/in/cezeani">LinkedIn</a></p>
     </footer>
 </body>
 </html>
